# engine_web-ifc

./: build-and-test.ps1
src/c/: ifc_schema.h  web_ifc_api.h
src/c/helpers/: log.c  log.h  numeric.h
src/c/test/: ifc_schema_test.c  log_test.c  numeric_test.c
src/cpp/: CMakeLists.txt
src/cpp/ffi/: web-ifc-ffi.cpp  web-ifc-ffi.h
src/cpp/test/: web-ifc-ffi-test.cpp
src/ffi/: CMakeLists.txt  ifc_schema.h  web_ifc_api.cpp  web_ifc_api.h
src/ffi/helpers/: log.cpp  log.h  strdup.cpp  web_ifc_wasm.cpp
src/ffi/test/: columns_ctests.cpp  columns_tests.cpp  columns_tests_.cpp  functional_translated_tests_.cpp  ifc_schema_test.cpp  log_test.cpp  numeric_test.cpp  translated_WebIfcApi_test_.cpp  web_ifc_api_spec_tests_.cpp  web_ifc_api_test.cpp  web_ifc_api_test_.cpp  web_ifc_api_tests.cpp  web_ifc_api_unit_test_.cpp  web_ifc_wasm_tests.cpp
src/schema-generator/: gen_functional_c_types.ts  gen_functional_types.ts  gen_functional_types_helpers.ts  gen_functional_types_interfaces.ts
src/ts/: web-ifc-api.ts
